# aish

./: Cargo.toml  LICENSE  README.md
data/: system_prompt.txt
src/: config.rs  llm.rs  main.rs  security.rs  shell.rs
src/ai/: llm.rs  mod.rs  workspace_context.rs
src/cli/: app.rs  init.rs  mod.rs
src/ops/: fs_ops.rs  mod.rs
src/ui/: error_format.rs  markdown.rs  mod.rs  ui_utils.rs
