[package]
name = "aish"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
dotenv = "0.15"
regex = "1.10"
ignore = "0.4"
inquire = "0.7"
colored = "2.1"
termimad = "0.28"
crossterm = "0.28"
